--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: https://example.org/
+baseURL: https://pdefukt.se/
 languageCode: sv-SE
 title: "PDE Fukt"
 theme: ["PaperMod"]
@@ -37,11 +37,11 @@ menu:
 
 assets:
   disableFingerprinting: true
-  favicon: "<link / abs url>"
-  favicon16x16: "<link / abs url>"
-  favicon32x32: "<link / abs url>"
-  apple_touch_icon: "<link / abs url>"
-  safari_pinned_tab: "<link / abs url>"
+  favicon: "/favicon.ico"
+  # favicon16x16: "<link / abs url>"
+  # favicon32x32: "<link / abs url>"
+  # apple_touch_icon: "<link / abs url>"
+  # safari_pinned_tab: "<link / abs url>"
   disableHLJS: false
   
 label:
